[package]
name = "daipendency-extractor-rust"
version = "0.1.0"
edition = "2021"
description = "Daipendency extractor for Rust library crates"
license = "MIT"
authors = ["Gus Narea"]

[build-dependencies]
cc = "1.2.6"

[dependencies]
daipendency-extractor = "1.0.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tree-sitter = "0.24.6"
tree-sitter-rust = "0.23.2"
walkdir = "2.4.0"

[dev-dependencies]
assertables = "9.5.0"
tempfile = "3.10.0"
