[package]
name = "daipendency-extractor-rust"
version = "0.5.0"
edition = "2021"
description = "Daipendency extractor for Rust library crates"
repository = "https://github.com/daipendency/daipendency-extractor-rust"
homepage = "https://github.com/daipendency/daipendency-extractor-rust"
documentation = "https://docs.rs/daipendency-extractor-rust"
license = "MIT"
authors = ["Gus Narea"]

[build-dependencies]
cc = "1.2.6"

[dependencies]
cargo_metadata = "0.19.1"
daipendency-extractor = "1.0.8"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tree-sitter = "0.24.6"
tree-sitter-rust = "0.23.2"

[dev-dependencies]
assertables = "9.5.0"
tempfile = "3.10.0"
